# chain-maintenance-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 65c1f6f39a06_create_motorcycles_and_maintenance_.py
app/: main.py
app/core/: config.py
app/crud/: maintenance_record.py  motorcycle.py
app/db/: base.py  session.py
app/models/: __init__.py  maintenance_record.py  motorcycle.py
app/routers/: maintenance_records.py  motorcycles.py
app/schemas/: __init__.py  maintenance_record.py  motorcycle.py
app/services/: chain_calculator.py
docs/: architecture.md  cost-estimate.md  requirements.md  schema.md
tests/: conftest.py  test_maintenance_records.py  test_motorcycles.py
